--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/patient-db?createDatabaseIfNot
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+#pour executer le script schema.sql
+spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 
